rebase / fixes 3/7 (#1121)
* ser / deser fixes 3/5 (#1113)

* Rebase 2/23 (#1093)

* rebase/merge 2/21 (#1080)

* rebase 2/9 (#1064)

* Rebase / update mc-feature-dev (01/31) (#1046)

* Notebook must be inService to get proxyUrl (#1056)

* Changes from rebase

* Throw exception if notebook status is not in service

* Fixes

* revert changes

* revert changes

* Handle AWS (#1058)

* Replace ApiException with ValidationException (#1059)

* Do not run PR checks on PRs targeting mc-feature (#1060)

* Replace ApiException with ValidationException

* Prevent PR checks to run when mc-feature is target

* Prevent PR checks to run when mc-feature is target

* [TERRA-382] Support delete notebooks (#1078)

* DeleteSageMakerNotebook framework

* Cleanup

* handle missing notebook

* revert change

* fix errors

* fix errors

* Update exception handling for notebooks (#1087)

* Build fixes (#1088)

* Change exception type (#1090)

* Build fixes

* Change exception type

* Handle ErrorReportException

* Dexamundsen/mc feature 0227 (#1099)

* Debug resource creation errors due to recent DSP/WSM baseline changes

* Trim user email for session name

* Update cloud context

* Update cloud context deser

* Update cloud context deser

* Update cloud context deser

* build fixes

* Fix deserialization

* Fix deserialization 2

* Fix deserialization 3

* Fix deserialization 3

* Backup

* Fixed, tested

* Change deserializer type

* remove Custom ser / deser

* spotlessApply

* Add optional parameter to wait for desiredStatus

* Fixes

* Fixes

* spotlessApply