@@ -2,6 +2,7 @@ package bio.terra.workspace.service.workspace;
 
 import static bio.terra.workspace.service.workspace.flight.WorkspaceFlightMapKeys.ControlledResourceKeys.SOURCE_WORKSPACE_ID;
 
+import bio.terra.common.iam.SamUser;
 import bio.terra.policy.model.TpsPolicyInputs;
 import bio.terra.workspace.app.configuration.external.BufferServiceConfiguration;
 import bio.terra.workspace.app.configuration.external.FeatureConfiguration;
@@ -28,6 +29,7 @@ import bio.terra.workspace.service.workspace.flight.WorkspaceCreateFlight;
 import bio.terra.workspace.service.workspace.flight.WorkspaceDeleteFlight;
 import bio.terra.workspace.service.workspace.flight.WorkspaceFlightMapKeys;
 import bio.terra.workspace.service.workspace.flight.WorkspaceFlightMapKeys.ControlledResourceKeys;
+import bio.terra.workspace.service.workspace.flight.aws.CreateAwsContextFlight;
 import bio.terra.workspace.service.workspace.flight.azure.CreateAzureContextFlight;
 import bio.terra.workspace.service.workspace.flight.azure.DeleteAzureContextFlight;
 import bio.terra.workspace.service.workspace.flight.gcp.CreateGcpContextFlightV2;
@@ -43,7 +45,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -315,7 +316,7 @@ public class WorkspaceService {
             "listRequesterRoles");
     Optional<WsmIamRole> highestRole = WsmIamRole.getHighestRole(uuid, requesterRoles);
     Preconditions.checkState(
-        highestRole.isPresent(), String.format("Workspace %s missing roles", uuid.toString()));
+        highestRole.isPresent(), String.format("Workspace %s missing roles", uuid));
     return highestRole.get();
   }
 
@@ -521,6 +522,41 @@ public class WorkspaceService {
         .submit();
   }
 
+  /**
+   * Process the request to create an AWS cloud context
+   *
+   * @param workspace workspace in which to create the context
+   * @param jobId caller-supplied job id of the async job
+   * @param userRequest user authentication info
+   * @param resultPath optional endpoint where the result of the completed job can be retrieved
+   */
+  @Traced
+  public void createAwsCloudContext(
+      Workspace workspace,
+      String jobId,
+      AuthenticatedUserRequest userRequest,
+      SamUser samUser,
+      @Nullable String resultPath) {
+    features.awsEnabledCheck();
+
+    String jobDescription =
+        String.format(
+            "Create AWS cloud context for workspace: name: '%s' id: '%s'  ",
+            workspace.getDisplayName().orElse(""), workspace.getWorkspaceId());
+
+    jobService
+        .newJob()
+        .description(jobDescription)
+        .jobId(jobId)
+        .flightClass(CreateAwsContextFlight.class)
+        .userRequest(userRequest)
+        .operationType(OperationType.CREATE)
+        .workspaceId(workspace.getWorkspaceId().toString())
+        .addParameter(JobMapKeys.RESULT_PATH.getKeyName(), resultPath)
+        .addParameter(WorkspaceFlightMapKeys.SAM_USER, samUser)
+        .submit();
+  }
+
   /** Delete the GCP cloud context for the workspace. */
   @Traced
   public void deleteGcpCloudContext(Workspace workspace, AuthenticatedUserRequest userRequest) {
@@ -583,7 +619,7 @@ public class WorkspaceService {
             // SAM does not always use lowercase emails, so lowercase everything here before the
             // contains check below
             .map(String::toLowerCase)
-            .collect(Collectors.toList());
+            .toList();
     if (!roleMembers.contains(targetUserEmail)) {
       return;
     }
